--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.6.0",
     "react-table": "^6.11.5",
-    "soap": "^0.33.0"
+    "soap": "^0.33.0",
+    "xml-js": "^1.6.11"
   }
 }
